# resetAPI

./: .gitignore  .replit  README.md  app.py  extras.py  main.py  pyproject.toml  requirements.txt
asset/: donators.json  levels.json
core/: base_models.py  game_functions.py  image_gen.py
static/: Footer-Dark.css  bootstrap.min.css  index.js  styles.css  untitled.css
tempdata/: tempbalance.json
templates/: authentication.html  dashboard.html  index.html
tetris/: __init__.py  engine.py  game.py  types.py
tetris/impl/: __init__.py  custom.py  gravity.py  presets.py  queue.py  rotation.py  scorer.py
