[tool.poetry]
name = "reset-api"
version = "1.0.0f"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
uvicorn = "^0.18.3"
anyio = "^3.6.1"
bson = "^0.5.10"
owoify = "^0.3.1"
fastapi = "^0.81.0"
requests = "^2.28.1"
"akinator.py" = {extras = ["fast_async"], version = "^0.2.1"}
Pillow = "^9.2.0"
beautifulsoup4 = "^4.11.1"
xmltodict = "^0.13.0"
aiohttp = "^3.8.1"
aioify = "^0.4.1"
pydantic = "^1.9.2"
slowapi = "^0.1.6"


[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"